finished lab4